kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: findmydeviceserver
  namespace: findmydevice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: findmydeviceserver
  serviceName: findmydeviceserver
  template:
    metadata:
      labels:
        name: findmydeviceserver
    spec:
      serviceAccountName: findmydeviceserver
      securityContext:
        fsGroup: 1000
      containers:
        - name: findmydeviceserver
          image: lansible/findmydeviceserver:0.3.6
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            timeoutSeconds: 5
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: findmydeviceserver-data
