kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: findmydeviceserver
  namespace: findmydevice
  labels:
    app: findmydeviceserver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret-type: auth-map
    nginx.ingress.kubernetes.io/auth-secret: findmydeviceserver-basic-auth
spec:
  rules:
    - host: &host finddeviceserver.example.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: findmydeviceserver
                port:
                  name: http
  tls:
    - hosts:
        - *host
      secretName: finddeviceserver-cert
